feat: version V2 del proyecto, mejor uso de Dtos