@@ -1,43 +1,51 @@
 package com.pruebatecnica.TecMarket.service;
 
-import com.pruebatecnica.TecMarket.entity.Dto.SucursalDto;
+import com.pruebatecnica.TecMarket.entity.Dto.SucursalRequest;
+import com.pruebatecnica.TecMarket.entity.Dto.SucursalResponse;
+import com.pruebatecnica.TecMarket.entity.Sucursal;
 import com.pruebatecnica.TecMarket.exception.NotFoundException;
-import com.pruebatecnica.TecMarket.mapper.Mapper;
 import com.pruebatecnica.TecMarket.repository.SucursalRepository;
 import com.pruebatecnica.TecMarket.usecase.ISucursal;
 import lombok.AllArgsConstructor;
+import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
 public class SucursalService implements ISucursal {
 
     private final SucursalRepository repository;
+    private final ModelMapper mapper;
 
     @Override
-    public List<SucursalDto> listSucursales() {
-        return repository.findAll().stream()
-                .map(Mapper::toDto)
-                .toList();
+    public List<SucursalResponse> listSucursales() {
+        return repository.findAll()
+                .stream()
+                .map(sucursal -> mapper.map(sucursal, SucursalResponse.class))
+                .collect(Collectors.toList());
     }
 
     @Override
-    public SucursalDto createSucursal(SucursalDto sucursal) {
-        return Mapper.toDto(repository.save(Mapper.toEntity(sucursal)));
+    public SucursalResponse createSucursal(SucursalRequest sucursal) {
+        var registrado = repository.save(mapper.map(sucursal, Sucursal.class));
+        return mapper.map(registrado, SucursalResponse.class);
     }
 
     @Override
-    public SucursalDto updateSucursal(Long idSucursal, SucursalDto sucursal) {
-        repository.findById(idSucursal).orElseThrow(() -> new NotFoundException("Sucursal no encontrada"));
-        sucursal.setId(idSucursal);
-        return Mapper.toDto(repository.save(Mapper.toEntity(sucursal)));
+    public SucursalResponse updateSucursal(Long idSucursal, SucursalRequest sucursal) {
+        repository.findById(idSucursal).orElseThrow(() -> new NotFoundException("⚠️ Sucursal no encontrada"));
+        var actualizado = mapper.map(sucursal, Sucursal.class);
+        actualizado.setId(idSucursal);
+        return mapper.map(repository.save(actualizado), SucursalResponse.class);
     }
 
     @Override
     public void deleteSucursal(Long idSucursal) {
-        if(!repository.existsById(idSucursal)) throw new NotFoundException("Sucursal no encontrada");
+        if(!repository.existsById(idSucursal)) throw new NotFoundException("⚠️ Sucursal no encontrada");
         repository.deleteById(idSucursal);
     }
+
 }
